--- a/pohlmanprotean/Dockerfile
+++ b/pohlmanprotean/Dockerfile
@@ -5,7 +5,7 @@ FROM node:16
 WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json
-COPY ["package*.json", "package-lock.json","./"]
+COPY ["package*.json", "./"]
 
 # Install dependencies
 RUN npm install
@@ -13,11 +13,14 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-# Expose the application port
-EXPOSE 3000
-
-# Build the TypeScript code
+# Build the React app
 RUN npm run build
 
-# Command to run the application
-CMD ["npm", "run","start"]
+# Install serve globally
+RUN npm install -g serve
+
+# Expose the application port
+EXPOSE 8080
+
+# Command to serve the app
+CMD ["serve", "-s", "build", "-l", "8080"]
