--- a/pohlmanprotean.se/package.json
+++ b/pohlmanprotean.se/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "next": "^14.2.15",
@@ -20,8 +21,8 @@
     "@types/react-dom": "^18",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.37.1",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
