--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,34 @@
-name: Deploy to Google Cloud Run
+name: Build and Deploy to Google Cloud Run
 
 on:
   push:
     branches:
-      - main  # or the branch you want to trigger on
+      - main
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: pohlmanprotean-website
-          export_default_credentials: true
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Build and Push Docker image
+      - name: Build and push Docker image
         run: |
-          gcloud builds submit --tag gcr.io/pohlmanprotean-website/pohlmanprotean-website-image .
+          gcloud builds submit --tag gcr.io/pohlmanprotean-website/pohlmanprotean-website-image pohlmanprotean.se
 
-      - name: Deploy to Cloud Run
+      - name: Deploy to Google Cloud Run
         run: |
           gcloud run deploy pohlmanprotean-website \
             --image gcr.io/pohlmanprotean-website/pohlmanprotean-website-image \
             --platform managed \
-            --region europe-west1 \
-            --allow-unauthenticated  # Remove if you want to restrict access
+            --region YOUR_REGION \
+            --allow-unauthenticated
