--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
           gcloud run deploy pohlmanprotean-website \
             --image gcr.io/pohlmanprotean-website/pohlmanprotean-website-image \
             --platform managed \
-            --region YOUR_REGION \
+            --region europe-west1 \
             --allow-unauthenticated
