--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,11 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1  # Update to the latest version
+        uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
+          access_token_scopes: https://www.googleapis.com/auth/cloud-platform
+      
       - name: Build and push Docker image
         run: |
           gcloud builds submit --tag gcr.io/pohlmanprotean-website/pohlmanprotean-website-image pohlmanprotean.se
