--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: List directory contents
+        run: ls -R # This lists all files and directories to verify structure
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
