--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: List directory contents
-        run: ls -R # This lists all files and directories to verify structure
+        run: ls -R # List all files and directories to confirm structure
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          gcloud builds submit dev-pohlmanprotean.se --tag gcr.io/dev-pohlmanprotean-website/dev-pohlmanprotean-website-image
+          gcloud builds submit pohlmanprotean.se --tag gcr.io/dev-pohlmanprotean-website/dev-pohlmanprotean-website-image
 
       - name: Deploy to Google Cloud Run
         run: |
