--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v3.2.0
@@ -21,7 +21,7 @@ jobs:
         uses: docker/setup-buildx-action@v2.6.0
 
       - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1.7.0
+        uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets[env.BRANCH_NAME == 'main' && 'MAIN_GCP_SA_KEY' || 'DEV_GCP_SA_KEY'] }}
           access_token_scopes: https://www.googleapis.com/auth/cloud-platform
