--- a/pohlmanprotean.se/package.json
+++ b/pohlmanprotean.se/package.json
@@ -18,13 +18,15 @@
     "next": "^14.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "@types/nodemailer": "^6.4.16"
   }
 }
