--- a/pohlmanprotean.se/package.json
+++ b/pohlmanprotean.se/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "release": "standard-version"
+    "release": "semantic-release"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
@@ -28,7 +28,6 @@
     "@types/nodemailer": "^6.4.16",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "standard-version": "^9.5.0",
     "tailwindcss": "^3.3.6"
   }
 }
