--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,14 +17,17 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # Adjust to your preferred version
+          node-version: '16'  # Adjust to your preferred version
 
       - name: Install dependencies
         run: |
+          cd pohlmanprotean.se  # Change to the directory where package.json is located
           npm install
+        working-directory: ./pohlmanprotean.se  # Set the correct working directory
 
       - name: Run semantic-release
         run: |
+          cd pohlmanprotean.se  # Ensure we're in the correct directory
           npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for semantic-release to push tags and create releases
@@ -35,7 +38,7 @@ jobs:
 
     steps:
       - name: Trigger Deployment Workflow
-        uses: ridvan-bot/workflow-dispatch@v1
+        uses: peter-evans/workflow-dispatch@v1
         with:
           repository: ${{ github.repository }}
           workflow: deploy.yml  # This should be the filename of your deployment workflow
