--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           cd pohlmanprotean.se  # Change to the directory where package.json is located
           npm install
-        working-directory: ./pohlmanprotean.se  # Set the correct working directory
+        working-directory: ../pohlmanprotean.se  # Set the correct working directory
 
       - name: Run semantic-release
         run: |
