--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,15 +20,12 @@ jobs:
           node-version: '20'  # Adjust to your preferred version
 
       - name: Install dependencies
-        run: |
-          cd pohlmanprotean.se  # Change to the directory where package.json is located
-          npm install
-        working-directory: ./pohlmanprotean.se  # Set the correct working directory relative to the root
+        run: npm install
+        working-directory: ./pohlmanprotean.se  # Point to the directory where package.json is located
 
       - name: Run semantic-release
-        run: |
-          cd pohlmanprotean.se  # Ensure we're in the correct directory
-          npm run release
+        run: npm run release
+        working-directory: ./pohlmanprotean.se  # Run semantic-release in the same directory
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Required for semantic-release to push tags and create releases
 
