--- a/pohlmanprotean.se/package.json
+++ b/pohlmanprotean.se/package.json
@@ -28,6 +28,7 @@
     "@types/nodemailer": "^6.4.16",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "semantic-release": "^24.2.0",
     "tailwindcss": "^3.3.6"
   }
 }
