--- a/pohlmanprotean.se/package.json
+++ b/pohlmanprotean.se/package.json
@@ -23,6 +23,9 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.16",
