--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,10 @@
 name: Build and Deploy to Google Cloud Run
 
 on:
-  workflow_dispatch: 
+  push:
+    branches:
+      - dev
+      - main
 
 jobs:
   deploy:
