--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,15 @@
 name: Trigger Semantic Release
 
 on:
-    workflow_call:
-        inputs:
-            branches:
-                required: true
-                type: string
+  workflow_call:
+    inputs:
+      branches:
+        required: true
+        type: string
+
 jobs:
-    execute-semantic-release:
-        uses: ridvan-bot/workflows/.github/workflows/semantic-release.yaml@dev
-        with:
-            branches: ${{ inputs.branches }}
+  execute-semantic-release:
+    if: ${{ inputs.branches == 'main' }}
+    uses: ridvan-bot/workflows/.github/workflows/semantic-release.yaml@main
+    with:
+      branches: ${{ inputs.branches }}
