--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
       branches:
         required: true
         type: string
+      repo_path:
+        required: true
+        type: string
+        default: './pohlmanprotean.se/'
 
 jobs:
   # Early exit job to complete workflow if branches is not "main"
@@ -22,3 +26,4 @@ jobs:
     uses: ridvan-bot/workflows/.github/workflows/semantic-release.yaml@main
     with:
       branches: ${{ inputs.branches }}
+      repo_path: ${{ inputs.repo_path }}
