--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,16 @@ on:
 jobs:
   # Early exit job to complete workflow if branches is not "main"
   No-release:
-    if: ${{ inputs.branches != 'main' }}
+    if: ${{ inputs.branches != 'dev' }}
     runs-on: ubuntu-latest
     steps:
       - name: No release
-        run: echo "Branch is not main, no need to release."
+        run: echo "Branch is not dev, no need to release."
 
   # Execute semantic release only if branches is "main"
   execute-semantic-release:
-    if: ${{ inputs.branches == 'main' }}
-    uses: ridvan-bot/workflows/.github/workflows/semantic-release.yaml@main
+    if: ${{ inputs.branches == 'dev' }}
+    uses: ridvan-bot/workflows/.github/workflows/semantic-release.yaml@dev
     with:
       branches: ${{ inputs.branches }}
       repo_path: ${{ inputs.repo_path }}
