--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: No release
         run: echo "Branch is not dev, no need to release."
 
-  # Execute semantic release only if branches is "main"
+  # Execute semantic release only if branches is "dev"
   execute-semantic-release:
     if: ${{ inputs.branches == 'dev' }}
     uses: ridvan-bot/workflows/.github/workflows/semantic-release.yaml@dev
