Fix APP-0004: Change to only run semantic when main branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,8 @@ jobs:
       branches: ${{ github.ref_name }}
       repo_path: 'pohlmanprotean.se/'
     secrets:
-      token: ${{ secrets.GH_TOKEN }}  # Pass the token as an environment variable
+      token: ${{ secrets.GH_TOKEN }}  # Pass the GH_TOKEN as 'token' to release.yml
+ # Pass the token as an environment variable
   deploy:
     needs: [execute-release]
     runs-on: ubuntu-22.04
