--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,27 +13,27 @@ on:
     secrets:
       token:
         required: true
+
 jobs:
-  # Early exit job to complete workflow if branches is not "main"
+  # Early exit job to complete workflow if branches is not "dev"
   No-release:
-    if: ${{ inputs.branches != 'main' }}
+    if: ${{ inputs.branches != 'dev' }}
     runs-on: ubuntu-latest
     steps:
       - name: No release
-        run: echo "Branch is not main, no need to release."
+        run: echo "Branch is not dev, no need to release."
 
-  # Execute semantic release only if branches is "main"
+  # Execute semantic release only if branches is "dev"
   execute-semantic-release:
-    if: ${{ inputs.branches == 'main' }}
-    runs-on: ubuntu-latest
+    if: ${{ inputs.branches == 'dev' }}
+    runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout the repository
+        uses: actions/checkout@v3
+      - name: Trigger Semantic Release
+        uses: ridvan-bot/workflows/.github/workflows/semantic-release.yml@dev
         with:
-          node-version: '20'
-      - name: Run semantic release
-        env:
-          GITHUB_TOKEN: ${{ secrets.token }}
-        run: npx semantic-release
+          branches: ${{ inputs.branches }}
+          repo_path: ${{ inputs.repo_path }}
+        secrets:
+          token: ${{ secrets.token }}
