--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,9 @@ on:
     branches:
       - dev
       - main
+
 jobs:
+  # Use the reusable workflow directly as a top-level job
   execute-release:
     uses: ridvan-bot/website/.github/workflows/release.yml@dev
     with:
@@ -13,9 +15,10 @@ jobs:
       repo_path: 'pohlmanprotean.se/'
     secrets:
       token: ${{ secrets.GH_TOKEN }}  # Pass the GH_TOKEN as 'token' to release.yml
- # Pass the token as an environment variable
+
+  # Deployment job depends on the success of the execute-release job
   deploy:
-    needs: [execute-release]
+    needs: execute-release
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
@@ -35,7 +38,7 @@ jobs:
           access_token_scopes: https://www.googleapis.com/auth/cloud-platform
           
       - name: Configure gcloud CLI
-        run: |          
+        run: |
           gcloud config set project ${{ env.BRANCH_NAME }}-pohlmanprotean-website
           gcloud config set run/region europe-west1
           gcloud auth configure-docker gcr.io
@@ -45,7 +48,7 @@ jobs:
           docker build -t gcr.io/${{ env.BRANCH_NAME }}-pohlmanprotean-website/${{ env.BRANCH_NAME }}-pohlmanprotean-website-image -f pohlmanprotean.se/Dockerfile pohlmanprotean.se
 
       - name: Push Docker image to Google Container Registry
-        run: |          
+        run: |
           docker push gcr.io/${{ env.BRANCH_NAME }}-pohlmanprotean-website/${{ env.BRANCH_NAME }}-pohlmanprotean-website-image
 
       - name: Deploy to Google Cloud Run
