--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
   execute-release:
     uses: ridvan-bot/website/.github/workflows/release.yml@dev
     with:
-      branches: ${{ github.ref_name }}
+      branches: "dev"
       repo_path: 'pohlmanprotean.se/'
     secrets:
       token: ${{ secrets.GH_TOKEN }}  # Pass the GH_TOKEN as 'token' to release.yml
