--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,27 +13,27 @@ on:
     secrets:
       token:
         required: true
-
 jobs:
-  # Early exit job to complete workflow if branches is not "dev"
+  # Early exit job to complete workflow if branches is not "main"
   No-release:
-    if: ${{ inputs.branches != 'dev' }}
+    if: ${{ inputs.branches != 'main' }}
     runs-on: ubuntu-latest
     steps:
       - name: No release
-        run: echo "Branch is not dev, no need to release."
+        run: echo "Branch is not main, no need to release."
 
-  # Execute semantic release only if branches is "dev"
+  # Execute semantic release only if branches is "main"
   execute-semantic-release:
-    if: ${{ inputs.branches == 'dev' }}
-    runs-on: ubuntu-22.04
+    if: ${{ inputs.branches == 'main' }}
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v3
-      - name: Trigger Semantic Release
-        uses: ridvan-bot/workflows/.github/workflows/semantic-release.yml@dev
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          branches: ${{ inputs.branches }}
-          repo_path: ${{ inputs.repo_path }}
-        secrets:
-          token: ${{ secrets.token }}
+          node-version: '20'
+      - name: Run semantic release
+        env:
+          GITHUB_TOKEN: ${{ secrets.token }}
+        run: npx semantic-release
