--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   execute-code-quality-validation:
-    uses: Ridvan-bot/website/.github/workflows/validate.yml
+    uses: Ridvan-bot/website/.github/workflows/validate.yml@main
     with:
       eslint-enable: true
 
   execute-release:
-    uses: Ridvan-bot/website/.github/workflows/release.yml
+    uses: Ridvan-bot/website/.github/workflows/release.yml@main
     with:
       branches: "${{ github.ref_name }}"
       repo_path: 'pohlmanprotean.se/'
