Fix: workflow call version

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -26,4 +26,4 @@ on:
 jobs:
   call-nodejs-test-workflow:
     name: Node.js Test
-    uses: Ridvan-bot/workflows/.github/workflows/nodejs-test.yml
+    uses: Ridvan-bot/workflows/.github/workflows/nodejs-test.yml@dev
