--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   execute-code-quality-validation:
-    uses: Ridvan-bot/website/.github/workflows/validate.yml@main
+    uses: Ridvan-bot/website/.github/workflows/validate.yml@dev
     with:
       eslint-enable: true
 
