Fix: token input

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     uses: Ridvan-bot/website/.github/workflows/validate.yml@dev
     with:
       eslint-enable: true
+    secrets:
+      token: ${{ secrets.GH_TOKEN }}
 
   execute-release:
     uses: Ridvan-bot/website/.github/workflows/release.yml@main
