--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "conventional-changelog-conventionalcommits": "^8.0.0",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^11.11.10",
     "next": "^14.0.4",
@@ -28,7 +29,6 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.0",
     "@semantic-release/npm": "^12.0.1",
-    "@semantic-release/release-notes-generator": "^14.0.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.16",
