--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -28,7 +28,7 @@ on:
 jobs:
   call-nodejs-test-workflow:
     name: Node.js Test
-    uses: Ridvan-bot/workflows/.github/workflows/nodejs-test.yml@main
+    uses: Ridvan-bot/workflows/.github/workflows/nodejs-test.yml@v.1.0.0
     with:
       eslint-enable: ${{ inputs.eslint-enable }}
       eslint-command: ${{ inputs.eslint-command }}
