fix: deploy sends a eslint command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
     uses: ./.github/workflows/validate.yml
     with:
       eslint-enable: true
+      eslint-command: npm run lint
     secrets:
       token: ${{ secrets.GH_TOKEN }}
 
