--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
   # Execute semantic release only if branches is "main"
   execute-semantic-release:
     if: ${{ inputs.branches == 'main' }}
-    uses: Ridvan-bot/workflows/.github/workflows/semantic-release.yml@v1.0.0
+    uses: Ridvan-bot/workflows/.github/workflows/semantic-release.yml@main
     with:
       branches: "${{ inputs.branches }}"
     secrets:
