test: add default eslint command

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -12,6 +12,7 @@ on:
           required: false
           type: string
           description: ESLint command
+          default: npx eslint --config eslint.config.mjs '**/*.{js,ts,tsx}' || exit 1
       unit-test-enable:
             required: false
             type: boolean
