--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,4 +62,6 @@ jobs:
             --platform managed \
             --region europe-west1 \
             --allow-unauthenticated
-            --update-env-vars EMAIL_APP_PASS=${{ secrets.EMAIL_APP_PASS }},EMAIL_TO=${{ secrets.EMAIL_TO }},EMAIL_USER=${{ secrets.EMAIL_USER }}
+            --set-env-vars EMAIL_APP_PASS=${{ secrets.EMAIL_APP_PASS }}
+            --set-env-vars EMAIL_TO=${{ secrets.EMAIL_TO }}
+            --set-env-vars EMAIL_USER=${{ secrets.EMAIL_USER }}
