--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,6 @@ jobs:
           gcloud config set run/region europe-west1
           gcloud auth configure-docker gcr.io
 
-      - name: Check gcloud SDK version
-        run: gcloud --version
       - name: Build Docker image
         run: |
           docker build -t gcr.io/${{ env.BRANCH_NAME }}-pohlmanprotean-website/${{ env.BRANCH_NAME }}-pohlmanprotean-website-image -f Dockerfile .
@@ -60,8 +58,9 @@ jobs:
       - name: Deploy to Google Cloud Run
         run: |
           gcloud run deploy ${{ env.BRANCH_NAME }}-pohlmanprotean-website \
-            --image gcr.io/${{ env.BRANCH_NAME }}-pohlmanprotean-website/${{ env.BRANCH_NAME }}-pohlmanprotean-website-image \
-            --platform managed \
-            --region europe-west1 \
-            --allow-unauthenticated
-            --set-env-vars EMAIL_APP_PASS=${{ secrets.EMAIL_APP_PASS }}
+          --image gcr.io/${{ env.BRANCH_NAME }}-pohlmanprotean-website/${{ env.BRANCH_NAME }}-pohlmanprotean-website-image \
+          --platform managed \
+          --region europe-west1 \
+          --allow-unauthenticated \
+          --update-env-vars "EMAIL_APP_PASS=${{ secrets.EMAIL_APP_PASS }},EMAIL_TO=${{ secrets.EMAIL_TO }},EMAIL_USER=${{ secrets.EMAIL_USER }}"
+
