--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
@@ -32,9 +33,12 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
     "@types/nodemailer": "^6.4.16",
+    "@types/jest": "^29.5.14",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "semantic-release": "^24.2.0",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
